fix #22 image on hover is not overflowing

--- a/_sass/4-layouts/_home.scss
+++ b/_sass/4-layouts/_home.scss
@@ -263,6 +263,8 @@
   }
   .article-head {
     background: $black;
+    overflow: hidden;
+    margin-bottom: 20px;
   }
   .article-image {
     img {
@@ -272,7 +274,6 @@
     display: block;
     background-size: cover;
     padding-top: 66.66%;
-    margin-bottom: 20px;
     background-size: cover; //xxx contain
     background-position: center;
     background-repeat: no-repeat;
